feat: Configure ESLint and Prettier for code quality and formatting
- Added .eslintrc.json for ESLint configuration with Vue and TypeScript support.
- Introduced .prettierrc and .prettierignore for consistent code formatting.
- Updated package.json and package-lock.json to include ESLint and Prettier dependencies.
- Enhanced TypeScript configuration in tsconfig.json for stricter type checking.
- Refactored various components and styles to comply with new linting and formatting rules.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,17 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+
+    /* Vue */
+    "types": ["vite/client", "element-plus/global"],
 
     /* Paths */
     "baseUrl": ".",
@@ -27,6 +38,14 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ],
+  "exclude": [
+    "src/assets/iconfont/**/*"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
