--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write \"src/**/*.{js,ts,vue,scss}\" --ignore-path .prettierignore"
   },
   "dependencies": {
     "element-plus": "^2.9.9",
@@ -16,11 +19,20 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.14",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.6",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.21.0",
     "jsdom": "^26.1.0",
+    "prettier": "^3.2.5",
     "sass": "^1.87.0",
+    "typescript": "~5.3.3",
     "vite": "^6.3.5",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.3",
+    "vue-tsc": "^2.0.6"
   }
 }
