--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "jsdom": "^26.1.0",
     "prettier": "^3.2.5",
     "sass": "^1.87.0",
+    "terser": "^5.39.0",
     "typescript": "~5.3.3",
+    "unplugin-auto-import": "^19.2.0",
+    "unplugin-vue-components": "^28.5.0",
     "vite": "^6.3.5",
     "vitest": "^3.1.3",
     "vue-tsc": "^2.0.6"
