--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "format": "prettier --write \"src/**/*.{js,ts,vue,scss}\" --ignore-path .prettierignore"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "element-plus": "^2.9.9",
     "pinia": "^3.0.2",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
