--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,14 +38,7 @@
       "@/*": ["src/*"]
     }
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue"
-  ],
-  "exclude": [
-    "src/assets/iconfont/**/*"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["src/assets/iconfont/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
