--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,11 @@
   "printWidth": 100,
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "endOfLine": "auto"
-} 
+  "endOfLine": "auto",
+  "htmlWhitespaceSensitivity": "css",
+  "vueIndentScriptAndStyle": true,
+  "singleAttributePerLine": true,
+  "insertFinalNewline": true,
+  "trimTrailingWhitespace": true,
+  "proseWrap": "always"
+}
