--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/uuid": "^10.0.0",
+    "echarts": "^5.6.0",
     "element-plus": "^2.9.9",
     "pinia": "^3.0.2",
     "uuid": "^11.1.0",
@@ -31,6 +32,7 @@
     "eslint-plugin-vue": "^9.21.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.2.5",
+    "rollup-plugin-visualizer": "^5.14.0",
     "sass": "^1.87.0",
     "terser": "^5.39.0",
     "typescript": "~5.3.3",
